fix spacing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -81,7 +81,7 @@ button {
     padding: 0;
     border: 0;
     background-color: white;
-    top: 6px;
+    top: 8px;
     left: 8px;
   }
 }
